--- a/RubyShift2013/RubyShift2013-Info.plist
+++ b/RubyShift2013/RubyShift2013-Info.plist
@@ -14,6 +14,9 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
+				<string>152.png</string>
+				<string>120.png</string>
+				<string>76.png</string>
 				<string>57.png</string>
 				<string>114.png</string>
 				<string>72.png</string>
