--- a/RubyShift2013/RubyShift2013-Info.plist
+++ b/RubyShift2013/RubyShift2013-Info.plist
@@ -12,6 +12,8 @@
 	<dict>
 		<key>CFBundlePrimaryIcon</key>
 		<dict>
+			<key>UIPrerenderedIcon</key>
+			<false/>
 			<key>CFBundleIconFiles</key>
 			<array>
 				<string>152.png</string>
